# owntube

./: .dockerignore  .env.example  .gitignore  README.md  biome.json  docker-compose.unraid.yml  docker-compose.yml  env.unraid.example  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.github/workflows/: ci.yml
apps/ios/: .env.example  .gitignore  README.md  package.json  tsconfig.json
apps/ios/src-tauri/: Cargo.toml  Info-ios.plist  tauri.conf.json
apps/ios/src-tauri/capabilities/: default.json
apps/ios/src-tauri/icons/: icon.icns
apps/ios/src-tauri/src/: lib.rs  main.rs
apps/tv/: .env.example  .gitignore  .npmrc  App.tsx  README.md  app.json  metro.config.js  package.json  pnpm-lock.yaml  tsconfig.json
apps/web/: .env.example  Dockerfile  Dockerfile.dev  drizzle.config.ts  next.config.ts  package.json  playwright.config.ts  tsconfig.json  vitest.config.ts
docs/: SELF-HOSTING.md  UNRAID-DEPLOYMENT.md
e2e/: smoke.spec.ts
scripts/: export-brand-icons.ts  warm-cache.ts
src/app/: globals.css  layout.tsx
src/hooks/: use-large-video-grid-column-count.ts  use-live-hls-playback.ts  use-scrub-frame-preview.ts  use-sponsorblock-auto-skip.ts
src/lib/: card-preview-playback.ts  default-playback-quality.ts  favicon.ts  hls-same-origin.test.ts  hls-same-origin.ts  invidious-proxy.test.ts  invidious-proxy.ts  live-video.test.ts  live-video.ts  media-source-from-url.test.ts  media-source-from-url.ts  normalize-video-description.ts  pick-playback.test.ts  pick-playback.ts  piped-related-items.test.ts  short-video-aspect.test.ts  short-video.ts  video-display.ts  (+14 more)
(+583 files in other folders)
